--- a/sample.conf
+++ b/sample.conf
@@ -31,6 +31,7 @@ set codec0.cache_path "/var/lib/wanproxy"
 set codec0.local_size 2048
 set codec0.compressor zlib
 set codec0.compressor_level 6
+set codec0.byte_counts 1
 activate codec0
 
 create interface if0
