implemented support for multiple proxies

--- a/proxy/Makefile
+++ b/proxy/Makefile
@@ -1,8 +1,5 @@
 PROGRAM=wanproxy
 
-SRCS+=	proxy_connector.cc
-SRCS+=	proxy_listener.cc
-
 SRCS+=	wanproxy.cc
 SRCS+=	wanproxy_config.cc
 SRCS+=	wanproxy_config_class_codec.cc
@@ -13,7 +10,10 @@ SRCS+=	wanproxy_config_type_codec.cc
 SRCS+=	wanproxy_config_type_compressor.cc
 SRCS+=	wanproxy_config_type_proxy_type.cc
 SRCS+=	wanproxy_config_type_proxy_role.cc
+SRCS+=	proxy_listener.cc
+SRCS+=	proxy_connector.cc
 
-TOPDIR=../..
+TOPDIR=..
 USE_LIBS=common common/thread common/time common/uuid config crypto event http io io/net io/socket ssh xcodec xcodec/cache/coss zlib
 include ${TOPDIR}/common/program.mk
+
