updated sample configuration

--- a/sample.conf
+++ b/sample.conf
@@ -1,6 +1,6 @@
 ###############################################################################
 #
-# Sample configuration file for WANProxy XTech v3.0
+# Sample configuration file for WANProxy XTech v3.0.5
 #
 # Codec definition must include following cache directives:
 # - cache: Memory (default) or COSS (use persistent cache in disk)
@@ -15,9 +15,8 @@
 #         a proxy taking unencoded input and writing encoded output
 #         is considered to be a client.
 #
-# Only one proxy may be defined per instance. To host several proxies 
-# on the same node different processes must be launched each one with
-# its own configuration.
+# Any number of proxies can be defined in the same config file, and they will
+# share the specified cache if using the same codec.
 #
 # Upon reception of SIGHUP the daemon will reread this file and apply the
 # new values to any subsequent connections.
